Increase heap space for tests